--- a/scss/layout/_adjustment.scss
+++ b/scss/layout/_adjustment.scss
@@ -23,7 +23,7 @@ height: 100%;
 .section {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.31);
-    min-width: rem(940px);
+    /*min-width: rem(940px);*/
     min-height: rem(650px);
     display: flex;
 }
