--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,4 +21,5 @@ $tablets : 768px;
 @import "section/_contacts.scss";
 @import "section/_order.scss";
 @import "section/_menu.scss";
+@import "section/_burgers.scss";
 
